@@ -239,24 +239,22 @@ sub install {
     $install .= <<'EOF';
 
 config_install : pure_install
-	install -d -m 755 $(DESTDIR)$(SYSCONFDIR)
-	if [ -f $(DESTDIR)/$(SYSCONFDIR)/agent.cfg ]; then \
-	    install -m 644 etc/agent.cfg $(DESTDIR)$(SYSCONFDIR)/agent.cfg.new; \
+	$(MKPATH) $(DESTDIR)$(SYSCONFDIR)
+	$(NOECHO) $(CHMOD) $(PERM_DIR) $(DESTDIR)$(SYSCONFDIR)
+	if $(TEST_F) $(DESTDIR)/$(SYSCONFDIR)/agent.cfg; then \
+	    $(RM_F) $(DESTDIR)$(SYSCONFDIR)/agent.cfg.new; \
+	    $(CP) etc/agent.cfg $(DESTDIR)$(SYSCONFDIR)/agent.cfg.new; \
+	    $(CHMOD) $(PERM_RW) $(DESTDIR)$(SYSCONFDIR)/agent.cfg.new; \
 	else \
-	    install -m 644 etc/agent.cfg $(DESTDIR)$(SYSCONFDIR)/agent.cfg; \
+	    $(CP) etc/agent.cfg $(DESTDIR)$(SYSCONFDIR)/agent.cfg; \
+	    $(CHMOD) $(PERM_RW) $(DESTDIR)$(SYSCONFDIR)/agent.cfg; \
 	fi
 	$(ABSPERLRUN) -pi \
 	    -e "s|=> undef, # SYSCONFDIR.*|=> '$(SYSCONFDIR)',|;" \
 	        $(DESTDIR)$(DATADIR)/lib/FusionInventory/Agent/Config.pm
 
 data_install : pure_install
-	install -d -m 755 $(DESTDIR)$(DATADIR)
-	install -m 644 share/pci.ids $(DESTDIR)$(DATADIR)/
-	install -m 644 share/usb.ids $(DESTDIR)$(DATADIR)/
-	install -m 644 share/sysobject.ids $(DESTDIR)$(DATADIR)/
-	install -m 644 share/edid.ids $(DESTDIR)$(DATADIR)/
-	install -d -m 755 $(DESTDIR)$(DATADIR)/html
-	install -m 644 share/html/* $(DESTDIR)$(DATADIR)/html
+	$(MOD_INSTALL) "share" "$(DESTDIR)$(DATADIR)"
 
 setup_install : pure_install
 	# Cleanup setup file to only really needed hash during install
